# CodeSentry

./: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  WEEK1_SUMMARY.md  WEEK2_TASK1_SUMMARY.md  WEEK2_TASK2_SUMMARY.md  benchmark_parser.py  docker-compose.yml  test_api.sh  validate_structure.py
.kiro/specs/rust-analysis-engine/: design.md  requirements.md  tasks.md
src/: error.rs  lib.rs  main.rs  types.rs
src/analysis/: mod.rs
src/parser/: javascript.rs  mod.rs  typescript.rs
src/server/: mod.rs
tests/: integration_test.rs  javascript_parser_test.rs  performance_test.rs  typescript_parser_test.rs
