[package]
name = "rust-analysis-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tree-sitter parsers (for future use)
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"

# Async utilities
futures = "0.3"

# Performance and concurrency
rayon = "1.8"
dashmap = "5.5"

# Caching
lru = "0.12"

# Content hashing
sha2 = "0.10"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }